--- a/eta.html
+++ b/eta.html
@@ -270,20 +270,22 @@
 
         // *****
         // * etaTypeEditor
-        
+
         // * based on @node-red/editor-client/src/js/ui/editors/text.js
         // * Copyright JS Foundation and other contributors, http://js.foundation
 
         (function () {
             
-            var template = '<script type="text/x-red" data-templateX-name="_eta"><div class="form-row node-eta-editor-row"><div style="height: 200px;min-height: 150px;" class="node-eta-editor" id="node-input-eta"></div></div><' + '/script>';
+            // This way to define 'template' ensures that NR doesn't 'detect' an additional node named '_eta'.
+            var template = '<script type="text/x-red" data-template'
+            template += '-name="_eta"><div class="form-row node-eta-editor-row"><div style="height: 200px;min-height: 150px;" class="node-eta-editor" id="node-input-eta"></div></div><' + '/script>';
 
             var definition = {
                 show: function(options) {
                     var value = options.value;
                     var onComplete = options.complete;
                     var type = "_eta"
-                    if ($("script[data-templateX-name='"+type+"']").length === 0) {
+                    if ($("script[data-template-name='"+type+"']").length === 0) {
                         $(template).appendTo("#red-ui-editor-node-configs");
                     }
                     RED.view.state(RED.state.EDITING);
