Fixed some typos.

--- a/eta.html
+++ b/eta.html
@@ -714,12 +714,12 @@ A node to utilize Eta - the lightweight, powerful, pluggable embedded JS templat
 
 ### Inputs
 
-: msg (object) :  (standard) message object with data to be used for redering the \_\_root\_\_ template.
+: msg (object) :  (standard) message object with data to be used for rendering the \_\_root\_\_ template.
 
     
 ### Outputs
 
-: payload (string) : the result of redering the \_\_root\_\_ template with the data provided as input.
+: payload (string) : the result of rendering the \_\_root\_\_ template with the data provided as input.
     
 ### Details
 
